--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,28 +1,16 @@
 {
     "manifest_version": 3,
-    "name": "ShieldX - AI Security Scanner",
+    "name": "ShieldX - AI Phishing Detector",
     "version": "1.0",
-    "description": "Real-time AI fraud and phishing detection for your browser.",
+    "description": "Real-time AI fraud detection powered by ShieldX.",
     "permissions": [
-        "activeTab",
-        "storage",
-        "notifications",
-        "scripting"
+        "activeTab"
+    ],
+    "host_permissions": [
+        "https://shieldx-1.onrender.com/*"
     ],
     "action": {
         "default_popup": "popup.html",
-        "default_icon": {
-            "16": "icons/icon16.png",
-            "48": "icons/icon48.png",
-            "128": "icons/icon128.png"
-        }
-    },
-    "background": {
-        "service_worker": "background.js"
-    },
-    "icons": {
-        "16": "icons/icon16.png",
-        "48": "icons/icon48.png",
-        "128": "icons/icon128.png"
+        "default_title": "ShieldX Scan"
     }
 }
